--- a/QT/demo.ui
+++ b/QT/demo.ui
@@ -14,34 +14,63 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>翰诚科技标书自动化平台</string>
+  </property>
+  <property name="documentMode">
+   <bool>false</bool>
+  </property>
+  <property name="tabShape">
+   <enum>QTabWidget::Rounded</enum>
+  </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AllowTabbedDocks|QMainWindow::AnimatedDocks</set>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QToolButton" name="toolButton">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>210</y>
-      <width>91</width>
-      <height>51</height>
+      <x>60</x>
+      <y>90</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>...</string>
+     <string>目标网站</string>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>270</y>
-      <width>271</width>
-      <height>121</height>
+      <x>170</x>
+      <y>100</y>
+      <width>211</width>
+      <height>22</height>
      </rect>
     </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
+    <item>
+     <property name="text">
+      <string>中国政府采购网（CCGP）</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>项目1</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>项目2</string>
+     </property>
+    </item>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
